--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
           SMART CITY
         </h1>
         <p>
-          Click the blue symbol in the right corner and say "Hello" to initiate
-          a chat. <br /><br />
-          उजव्या कोपऱ्यातील निळ्या चिन्हावर क्लिक करा आणि चॅट सुरू करण्यासाठी
-          "हॅलो" म्हणा.
+          Click the blue symbol in the right corner and type "Hi" to initiate 
+          a chat.<br /><br />
+          उजव्या कोपऱ्यातील निळ्या चिन्हावर क्लिक करा आणि चॅट सुरू करण्यासाठी 
+          "हाय" टाइप करा.
         </p>
       </div>
       <div class="img">
