--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AURANGABAD SMART CITY</title>
+    <title>Chhatrapati Sambhajinagar SMART CITY</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -12,7 +12,7 @@
     <div class="main">
       <div class="text">
         <h1>
-          Welcome to <span class="bold"><b>AURANGABAD</b> </span> <br />
+          Welcome to <span class="bold"><b>Chhatrapati Sambhajinagar</b> </span> <br />
           SMART CITY
         </h1>
         <p>
